--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ PLATEGA_API_KEY=xxx
 WEBHOOK_URL=https://bot.yourdomain.com/webhook
 SECRET_KEY=your-super-secret-jwt-key-here
 LOG_LEVEL=INFO
+
+# 🌍 Locale
+DEFAULT_LANGUAGE=ru
