--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,9 @@
 [alembic]
 script_location = migrations
+prepend_sys_path = .
 sqlalchemy.url = driver://user:pass@localhost/dbname
+
+[post_write_hooks]
 
 [loggers]
 keys = root,sqlalchemy,alembic
